# ycnet

./: .gitignore  CMakeLists.txt
simple_packet/: test_packets.hpp
src/: clnt.hpp  main.cpp  svr.hpp  ycnet.hpp
